@@ -3,7 +3,6 @@ package com.proj.tech.controller;
 import com.proj.tech.dao.blocks.CodeDao;
 import com.proj.tech.dto.blocks.Code;
 import com.proj.tech.mapper.blocks.CodeMapper;
-import org.springframework.stereotype.Controller;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
@@ -33,11 +32,16 @@ public class CodeController {
     @GetMapping("/{id}")
     public Code getCode(@PathVariable Long id) {
 
-        return codeDao.findById(id).map(CodeMapper::of).orElse(null);
+        return codeDao.findById(id)
+                .map(CodeMapper::of)
+                .orElse(null);
     }
 
     @GetMapping("/{username}")
     public List<Code> getCodeByUsername(@PathVariable String username) {
-        return codeDao.findByUsername(username).stream().map(CodeMapper::of).collect(Collectors.toList());
+        return codeDao.findByUsername(username)
+                .stream()
+                .map(CodeMapper::of)
+                .toList();
     }
 }
